--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -1,4 +1,5 @@
+--path:".."
 --path:"../filehash/"
---path:"../src/"
+--path:"../niledb/private/"
 --passC:"-I ../filehash/"
 --passL:"../filehash/libfilehash.a -lpthread"
