--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -1,3 +1,3 @@
 --path:".."
---passC:"-I ../filehash/"
---passL:"../filehash/libfilehash.a -lpthread"
+#--passC:"-I ../filehash/"
+#--passL:"../filehash/libfilehash.a -lpthread"
